[package]
name = "checkout"
version = "0.4.0"
authors = ["Trevor Wilson <trevor@telco.in>"]
edition = "2021"

[dependencies]
bon = "2.3.0"
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
secrecy = "0.10.3"
bigdecimal = { version = "0.4.10", features = ["serde"] } # must satisfy diesel requirements

[dev-dependencies]
dotenvy = "0.15.7"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
once_cell = "1.21.3"
