[package]
name = "checkout"
version = "0.4.0"
authors = ["Telcoin Team <engineering-backend@telco.in>"]
edition = "2024"

[dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
bon = "3"
reqwest = { version = "0.13", features = ["json", "form"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
dotenvy = "0.15"
once_cell = "1"
rand = "0.9"
tokio = { version = "1", features = ["macros", "rt"] }
